<resources>
    <string name="app_name">SAPTRA</string>

    <!-- version app -->
    <string name="version_app">V1.3</string>
    <string name="apk_released">AR-200919</string>

    <!--SharedPreferences-->
    <string name="SATRA_PREFERENCES">SP_SAPTRA</string>
    <string name="sp_UsuarioId">UsuarioId</string>
    <string name="sp_NombresUsuario">NombresUsuario</string>
    <string name="sp_ApellidosUsuario">ApellidosUsuario</string>
    <string name="sp_TipoFigura">TipoFigura</string>
    <string name="sp_EmailUsuario">EmailUsuario</string>
    <string name="sp_Logged">Logged</string>
    <string name="sp_PeriodoId">PeriodoId</string>
    <string name="sp_UsuarioIdLoggOut">UsuarioId</string>

    <!--Menu SideBar-->
    <string name="str_home">Inicio</string>
    <string name="str_descargar">Descargar</string>
    <string name="str_planeacion">Planeación</string>
    <string name="str_consultar">Consultar</string>
    <string name="str_salir">Salir</string>

    <!--Home Activity-->
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <!--Download button-->
    <string name="Upload">Upload</string>
    <string name="Error">Error</string>
    <string name="Complete">Complete</string>

    <string name="str_certificados"><u>Ver Certificados</u></string>

</resources>
